// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product Image Display Component with custom image 1`] = `
<img
  alt="Product"
  className="productImg undefined "
  src="https://gliscano.jpg"
/>
`;

exports[`Product Image Display component with the image of product 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product"
    className="productImg undefined "
    src="./coffee-mug.png"
  />
</div>
`;
